--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,1 +1,14 @@
 
+name: deploy
+
+on:
+  push:
+    branches: [main]
+
+jobs:
+  deploycode:
+    runs-on: ubuntu-latest
+
+    steps: 
+     -name: practice
+     run: echo "code deployed successfully!"   
