--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,3 +11,15 @@ jobs:
     steps:
       - name: practice
         run: echo "code deployed successfully!"
+      - name: Post deployment comment
+        uses: actions/github-script@v7
+        with:
+          script: |
+            github.rest.issues.createComment({
+              issue_number: context.payload.pull_request ? context.payload.pull_request.number : null,
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              body: "🚀 Code deployed successfully!"
+            })
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
